# eurow2025_performance_streamlit

./: .gitignore  pyproject.toml  requirements.txt
src/1st_project/: config.yml  frontend.py  pases_perc_progr.py  plot_ActionBasedExpectedThreat_StatsBomb.py  plot_PlayerxTHeatMap_StatsBomb.py  plotting_Carries.py  plotting_offensive_performance.py  plotting_offensive_performance_unified.py  plotting_receptions.py  plotting_recoveries.py  plotting_recoveries2.py  plotting_shots.py  utils.py
src/event_data/: plot_ActionBasedExpectedThreat.py  plot_PassNetworks_challenge.py  plot_PlottingPasses_challenge.py  plot_PossessionChain_StatsBomb.py
src/possession_chain/: possession_chains_statsbomb_3998836.json  possession_chains_statsbomb_3998837.json  possession_chains_statsbomb_3998838.json  possession_chains_statsbomb_3998839.json  possession_chains_statsbomb_3998840.json  possession_chains_statsbomb_3998841.json  possession_chains_statsbomb_3998842.json  possession_chains_statsbomb_3998843.json  possession_chains_statsbomb_3998844.json  possession_chains_statsbomb_3998845.json  possession_chains_statsbomb_3998846.json  possession_chains_statsbomb_3998847.json  possession_chains_statsbomb_3998848.json  possession_chains_statsbomb_3998849.json  possession_chains_statsbomb_3998850.json  possession_chains_statsbomb_3998851.json  possession_chains_statsbomb_3998852.json  possession_chains_statsbomb_3998853.json  possession_chains_statsbomb_3998854.json  possession_chains_statsbomb_3998855.json  possession_chains_statsbomb_3998856.json  possession_chains_statsbomb_3998857.json  (+9 more)
(+8 files in other folders)
